fixed a bunch of code smells